@@ -7,12 +7,10 @@ import static shop.nuribooks.books.book.category.entity.QCategory.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
-
 import org.springframework.stereotype.Repository;
 
 import com.querydsl.jpa.impl.JPAQueryFactory;
@@ -71,8 +69,7 @@ public class BookCategoryCustomImpl implements BookCategoryCustom {
 			.fetch();
 		return books.stream()
 			.map(AdminBookListResponse::of)
-			.collect(Collectors.toList());
-
+			.toList();
 	}
 
 	@Override
@@ -82,6 +79,7 @@ public class BookCategoryCustomImpl implements BookCategoryCustom {
 			.from(bookCategory)
 			.join(bookCategory.book, book)
 			.where(bookCategory.category.id.in(categoryIds))
+			.where(book.deletedAt.isNull())
 			.offset(pageable.getOffset())
 			.limit(pageable.getPageSize())
 			.fetch();
@@ -103,18 +101,16 @@ public class BookCategoryCustomImpl implements BookCategoryCustom {
 				AdminBookListResponse bookDetails = AdminBookListResponse.of(book);
 
 				// 기여자 정보를 조회하여 역할별로 그룹화합니다.
-				List<BookContributorInfoResponse> contributors = bookContributorRepository.findContributorsAndRolesByBookId(book.getId());
+				List<BookContributorInfoResponse> contributors = bookContributorRepository.findContributorsAndRolesByBookId(
+					book.getId());
 				Map<String, List<String>> contributorsByRole = BookUtils.groupContributorsByRole(contributors);
 
 				// BookContributorsResponse 객체를 생성합니다.
 				return new BookContributorsResponse(bookDetails, contributorsByRole);
 			})
-			.collect(Collectors.toList());
-
+			.toList();
 		return new PageImpl<>(bookContributorsResponseList, pageable, totalElements);
 	}
-
-
 
 	@Override
 	public long countBookByCategoryIds(List<Long> categoryIds) {
